# Garak-MCP

./: .env.example  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
config/: ollama.json
src/: config.py  main.py  server.py  utils.py
